--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+    rel="stylesheet"
+  />
   <style>
     * {
       box-sizing: border-box;
+      font-family: "Press Start 2P", cursive;
     }
   </style>
 </head>
@@ -23,18 +30,26 @@
       <div
         style="
           position: relative;
-          height: 30px;
           width: 100%;
           display: flex;
           justify-content: flex-end;
+          border-top: 4px solid white;
+          border-left: 4px solid white;
+          border-bottom: 4px solid white;
         "
       >
-        <div style="background-color: yellow; height: 30px; width: 100%"></div>
+        <div
+          style="
+            background-color: rgba(255, 255, 255, 0.1);
+            height: 30px;
+            width: 100%;
+          "
+        ></div>
         <div
           id="playerHealth"
           style="
             position: absolute;
-            background: blue;
+            background: #84cc16;
             top: 0;
             right: 0;
             bottom: 0;
@@ -47,26 +62,38 @@
       <div
         id="timer"
         style="
-          background-color: red;
+          background-color: black;
           width: 100px;
-          height: 100px;
+          height: 60px;
           flex-shrink: 0;
           display: flex;
           align-items: center;
           justify-content: center;
+          color: white;
+          border: 4px solid white;
         "
       >
         10
       </div>
 
       <!-- enemy health -->
-      <div style="position: relative; height: 30px; width: 100%">
-        <div style="background-color: yellow; height: 30px"></div>
+      <div
+        style="
+          position: relative;
+          width: 100%;
+          border-top: 4px solid white;
+          border-right: 4px solid white;
+          border-bottom: 4px solid white;
+        "
+      >
+        <div
+          style="background-color: rgba(255, 255, 255, 0.1); height: 30px"
+        ></div>
         <div
           id="enemyHealth"
           style="
             position: absolute;
-            background: blue;
+            background: #84cc16;
             top: 0;
             right: 0;
             bottom: 0;
@@ -88,13 +115,18 @@
         bottom: 0;
         left: 0;
         right: 0;
-       
       "
-    >
-      
-    </div>
+    ></div>
     <canvas></canvas>
   </div>
+
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
+    integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+
   <script src="js/utils.js"></script>
   <script src="js/classes.js"></script>
   <script src="index.js"></script>
